--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ db.sqlite3
 **/__init__.py
 **/migrations/**
 vim.exe.stackdump
+/Twisted-20.3.0-cp38-cp38-win_amd64.whl
+/Twisted-20.3.0-cp38-cp38-win32.whl
