--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,37 @@
+aioredis==1.3.1
 asgiref==3.3.1
+async-timeout==3.0.1
+attrs==20.3.0
+autobahn==20.12.3
+Automat==20.2.0
+certifi==2020.12.5
+cffi==1.14.4
+channels==3.0.3
+channels-redis==3.2.0
+chardet==4.0.0
+constantly==15.1.0
+cryptography==3.3.1
+daphne==3.0.1
 Django==3.0.10
+docker==4.4.1
+hiredis==1.1.0
+hyperlink==21.0.0
+idna==2.10
+incremental==17.5.0
+msgpack==1.0.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyHamcrest==2.0.2
+pyOpenSSL==20.0.1
 pytz==2020.5
+pywin32==227
+requests==2.25.1
+service-identity==18.1.0
+six==1.15.0
 sqlparse==0.4.1
+Twisted @ file:///C:/Users/Sebastian/PycharmProjects/e_learning/e_learning_platform/Twisted-20.3.0-cp38-cp38-win32.whl
+txaio==20.12.1
+urllib3==1.26.2
+websocket-client==0.57.0
+zope.interface==5.2.0
